force-app/main/default/objects/MFR__c/MFR__c.object-meta.xml
<CustomObject>
    <label>MFR</label>
    <nameField>
        <label>MFR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MFR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>