force-app/main/default/objects/MFR__c/fields/Ing_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ing_3_Amount__c</fullName>
    <label>Ing 3 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>