force-app/main/default/objects/MFR__c/fields/Ingredient_1__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingredient 1</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipName>MRF</relationshipName>
    <type>Lookup</type>
</CustomField>