force-app/main/default/objects/MFR__c/fields/Ingredient_2__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingredient 2</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipName>MRF1</relationshipName>
    <type>Lookup</type>
</CustomField>