force-app/main/default/objects/MFR__c/fields/Ingredient_3__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingredient 3</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipName>MRF2</relationshipName>
    <type>Lookup</type>
</CustomField>