force-app/main/default/objects/MFR__c/fields/MFR_Title__c.field-meta.xml
<CustomField>
    <fullName>MFR_Title__c</fullName>
    <formula>Name + TEXT(Strength__c) + Unit_of_Measurement__r.Name + Dosage_Form__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFR Title</label>
    <type>Text</type>
</CustomField>