force-app/main/default/objects/MFR__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>